Bug: Shortcode CSS issue that was causing Vehicles to wrap incorrectly

--- a/application/views/shortcode/css/sc_newspaper.css
+++ b/application/views/shortcode/css/sc_newspaper.css
@@ -38,7 +38,7 @@
 }
 .sc-title-wrapper{
     border-radius: 4px 4px 0 0;
-    max-height: 25px;
+    max-height: 23px;
     overflow: hidden;
 }
 .sc-title-wrapper span{
